--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -63,13 +63,7 @@
                     <a href="/admin/notificaciones" class="dropdown-item">
                         <i class="fas fa-bell"></i> Notificaciones
                     </a>
-                    <a href="/admin/auditoria" class="dropdown-item">
-                        <i class="fas fa-shield-alt"></i> Registro de Actividad
-                    </a>
-                    <a href="/admin/backups" class="dropdown-item">
-                        <i class="fas fa-database"></i> Respaldo de Datos
-                    </a>
-                    <a href="/admin/ayuda" class="dropdown-item">
+                    <a href="/admin/ayuda-soporte" class="dropdown-item">
                         <i class="fas fa-question-circle"></i> Ayuda y Soporte
                     </a>
                     <div style="border-top: 1px solid #e9ecef; margin: 0.5rem 0;"></div>
