--- a/views/usuarios/reset-password.ejs
+++ b/views/usuarios/reset-password.ejs
@@ -8,16 +8,16 @@
   <link rel="stylesheet" href="/css/auth.css">
 </head>
 <body>
-  <% if (locals.messages && messages.error) { %>
+  <% if (error && error.length > 0) { %>
   <div class="alert-message error">
     <i class="fas fa-exclamation-circle"></i>
-    <span><%= messages.error %></span>
+    <span><%= error %></span>
     <span class="close-btn">&times;</span>
   </div>
   <% } %>
 
   <div class="auth-wrapper">
-    <a href="/login" class="back-arrow">
+    <a href="/usuarios/login" class="back-arrow">
       <i class="fas fa-arrow-left"></i>
     </a>
     
