--- a/views/dashboard/cliente.ejs
+++ b/views/dashboard/cliente.ejs
@@ -791,12 +791,12 @@
             
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-3">
-                    <a href="clientes/solicitudes/nueva" class="action-btn primary">
+                    <a href="clientes/solicitudes" class="action-btn primary">
                         <i class="fas fa-plus-circle"></i>
-                        <span>Nueva Solicitud de Retiro</span>
+                        <span>Nueva Solicitud</span>
                     </a>
                 </div>
-                <div class="row">
+               
                     <div class="col-lg-4 col-md-6 mb-3">
                         <a href="clientes/cotizaciones" class="action-btn primary">
                             <i class="fas fa-plus-circle"></i>
